Implemented user functionalities, token refresh and ui enhancements.