@@ -1,7 +1,11 @@
 package org.sofumar.portal.framework.config.security;
 
+import org.sofumar.portal.constants.RoleConstants;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -14,26 +18,51 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
 
+    // Make allowed origins configurable via env or application.properties
+    @Value("${app.cors.allowed-origins:http://localhost:8081,http://localhost:5173}")
+    private String[] allowedOrigins;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http, JwtAuthFilter jwt) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
-//                .cors(Customizer.withDefaults())
+                // integrate with the CorsConfigurationSource bean; global CorsFilter still ensures headers on errors
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/auth/login", "/auth/register", "/v3/api-docs/**", "/swagger-ui/**", "/actuator/health").permitAll()
-                        .requestMatchers("/auth/profile", "/auth/password-update").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/settings/**").hasRole("ADMIN")
+                        // permit preflight globally
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // public endpoints
+                        .requestMatchers("/auth/login", "/auth/register", "/auth/refresh", "/v3/api-docs/**", "/swagger-ui/**", "/actuator/health").permitAll()
+                        // authenticated endpoints
+                        .requestMatchers("/auth/profile", "/auth/password-update", "/auth/logout").authenticated()
+
+                        // role based
+
+                        // ADMIN only
+                        .requestMatchers("/users/**").hasRole(RoleConstants.ROLE_ADMIN)
+                        // Write operations - ADMIN only
+                        .requestMatchers(HttpMethod.PUT, "/settings/**").hasRole(RoleConstants.ROLE_ADMIN)
+
+                        // Write operations - ADMIN and MANAGER only
+                        .requestMatchers(HttpMethod.POST, "/members/**", "/payments/**", "/expenses/**").hasAnyRole(RoleConstants.ROLE_ADMIN, RoleConstants.ROLE_MANAGER)
+                        .requestMatchers(HttpMethod.PUT, "/members/**", "/payments/**", "/expenses/**").hasAnyRole(RoleConstants.ROLE_ADMIN, RoleConstants.ROLE_MANAGER)
+                        .requestMatchers(HttpMethod.DELETE, "/members/**", "/expenses/**").hasAnyRole(RoleConstants.ROLE_ADMIN, RoleConstants.ROLE_MANAGER)
+
+                        // Read operations - all authenticated roles
+                        .requestMatchers(HttpMethod.GET, "/members/**", "/payments/**", "/expenses/**", "/dashboard/**", "/references/**", "/settings/**").hasAnyRole(RoleConstants.ROLE_ADMIN, RoleConstants.ROLE_MANAGER, RoleConstants.ROLE_MEMBER)
                         .anyRequest().authenticated()
                 )
+                // ensure JWT filter does not block preflight; JwtAuthFilter should skip OPTIONS
                 .addFilterBefore(jwt, UsernamePasswordAuthenticationFilter.class)
                 .headers(h -> h.contentSecurityPolicy(csp -> csp.policyDirectives("default-src 'self'")))
                 .httpBasic(Customizer.withDefaults())
@@ -41,17 +70,43 @@ public class SecurityConfig {
         return http.build();
     }
 
+    /**
+     * Global CorsFilter with highest precedence.
+     * Ensures CORS headers are applied before any security or error handling.
+     */
+    @Bean
+    @Order(Ordered.HIGHEST_PRECEDENCE)
+    public CorsFilter corsFilter() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", buildCorsConfiguration());
+        return new CorsFilter(source);
+    }
+
+    /**
+     * CorsConfigurationSource kept for Spring Security .cors(...) integration.
+     * This is useful if other parts of Spring expect a CorsConfigurationSource bean.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", buildCorsConfiguration());
+        return source;
+    }
+
+    private CorsConfiguration buildCorsConfiguration() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:8081", "http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // Use explicit origins when allowCredentials is true
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept", "X-Requested-With"));
+        config.setExposedHeaders(List.of("Authorization", "Link")); // expose headers your client needs
         config.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        return source;
+        // Cache preflight for 1 hour to reduce preflight traffic
+        config.setMaxAge(3600L);
+
+        return config;
     }
 
     @Bean
